# weavefront

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  middleware.rs
backend/src/config/: mod.rs
backend/src/models/: deployment.rs  mod.rs  project.rs  target.rs
backend/src/routes/: auth.rs  deploy.rs  health.rs  mod.rs  projects.rs  targets.rs
backend/src/services/: ipfs.rs  mod.rs  pinata.rs  store.rs
public/: index.html  panel.html
