[package]
name = "weavefront"
version = "0.1.0"
edition = "2024"
description = "Web3 hosting panel — deploy to IPFS, Arweave, and beyond"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for IPFS/Arweave API calls)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "2"
